--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "liveServer.settings.port": 5502,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
-    "source.fixAll.stylelint": false
+    "source.fixAll.stylelint": "never"
   },
   "editor.formatOnSave": false
 }
